fix for MID-1371

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
@@ -18,6 +18,8 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
     <form wicket:id="form">
+        <div style="color: red;" wicket:id="feedback"/>
+
         <table style="margin: 10px;" cellpadding="4" cellspacing="4">
             <tr>
                 <td>
