--- a/gui/admin-gui/src/main/webapp/reports/reportReconciliation.jrxml
+++ b/gui/admin-gui/src/main/webapp/reports/reportReconciliation.jrxml
@@ -7,8 +7,8 @@
 	<style name="Title" forecolor="#FFFFFF" fontName="DejaVu Sans" fontSize="50" isBold="false"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="DejaVu Sans" fontSize="18" isBold="false"/>
 	<style name="Column header" mode="Transparent" forecolor="#FFFFFF" backcolor="#333333" fontName="DejaVu Sans" fontSize="12" isBold="true"/>
-	<style name="Detail" mode="Transparent" fontName="DejaVu Sans" fontSize="10" isBold="false" forecolor="#000000"/>
-	<style name="Row" mode="Transparent" fontName="DejaVu Sans" fontSize="10" isBold="false">
+	<style name="Detail" mode="Transparent" fontName="DejaVu Sans" fontSize="9" isBold="false" forecolor="#000000"/>
+	<style name="Row" mode="Transparent" fontName="DejaVu Sans" fontSize="9" isBold="false">
 		<conditionalStyle>
 			<style mode="Opaque" backcolor="#F0EFEF"/>
 		</conditionalStyle>
@@ -19,16 +19,14 @@
 	<parameter name="CLASS" class="javax.xml.namespace.QName"/>
 	<parameter name="INTENT" class="java.lang.String"/>
 	<queryString language="hql">
-		<![CDATA[select distinct (select u.name.orig from RUser as u join u.linkRef as ref where ref.targetOid = s.oid) as username, s.name.orig as name, s.synchronizationSituation as situation, ssd.situation as situationDescription from RShadow as s join s.resourceRef as resRef left join s.synchronizationSituationDescription as ssd where s.objectClass = $P{CLASS} and resRef.type = 8 and resRef.targetOid = $P{RESOURCE_OID} and s.kind = 0 order by s.synchronizationSituation, s.name.orig]]>
+		<![CDATA[select (select u.name.orig from RUser as u join u.linkRef as ref where ref.targetOid = s.oid) as username, s.name.orig as name, s.synchronizationSituation as situation, s.synchronizationTimestamp as situationTimestamp from RShadow as s join s.resourceRef as resRef where s.objectClass = $P{CLASS} and resRef.type = 8 and resRef.targetOid = $P{RESOURCE_OID} and s.kind = 0 order by s.synchronizationSituation, s.name.orig]]>
 	</queryString>
 	<field name="username" class="java.lang.String"/>
 	<field name="name" class="java.lang.String"/>
 	<field name="situation" class="com.evolveum.midpoint.repo.sql.data.common.enums.RSynchronizationSituation">
 		<fieldDescription><![CDATA[situation]]></fieldDescription>
 	</field>
-	<field name="situationDescription" class="com.evolveum.midpoint.repo.sql.data.common.enums.RSynchronizationSituation">
-		<fieldDescription><![CDATA[situationDescription]]></fieldDescription>
-	</field>
+	<field name="situationTimestamp" class="javax.xml.datatype.XMLGregorianCalendar"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -49,58 +47,58 @@
 				</image>
 			</frame>
 			<staticText>
-				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="2" y="70" width="120" height="20" forecolor="#000000"/>
+				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="2" y="70" width="100" height="20" forecolor="#000000"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="14" isBold="true"/>
+					<font fontName="DejaVu Sans" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Resource:]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="122" y="70" width="280" height="20" forecolor="#000000"/>
+				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="102" y="70" width="280" height="20" forecolor="#000000"/>
 				<textElement verticalAlignment="Middle">
-					<font size="14" isBold="false"/>
+					<font size="12" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{RESOURCE_NAME}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="2" y="90" width="120" height="20" forecolor="#000000"/>
+				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="2" y="90" width="100" height="20" forecolor="#000000"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="14" isBold="true"/>
+					<font fontName="DejaVu Sans" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Intent:]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="122" y="90" width="150" height="20" forecolor="#000000"/>
+				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="102" y="90" width="150" height="20" forecolor="#000000"/>
 				<textElement verticalAlignment="Middle">
-					<font size="14" isBold="false"/>
+					<font size="12" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{INTENT}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="2" y="110" width="120" height="20" forecolor="#000000"/>
+				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="2" y="110" width="100" height="20" forecolor="#000000"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="14" isBold="true"/>
+					<font fontName="DejaVu Sans" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Object Class:]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="122" y="110" width="150" height="20" forecolor="#000000"/>
+				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="102" y="110" width="150" height="20" forecolor="#000000"/>
 				<textElement verticalAlignment="Middle">
-					<font size="14" isBold="false"/>
+					<font size="12" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{CLASS}.getLocalPart()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="430" y="70" width="170" height="20" forecolor="#000000"/>
+				<reportElement uuid="e035dbd5-dc2f-45cb-936c-a08e9c011e43" x="400" y="70" width="150" height="20" forecolor="#000000"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="DejaVu Sans" size="14" isBold="true"/>
+					<font fontName="DejaVu Sans" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Report generated on:]]></text>
 			</staticText>
 			<textField pattern="EEEEE dd MMMMM yyyy, HH:mm:ss">
-				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="600" y="70" width="200" height="20" forecolor="#000000"/>
+				<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" x="550" y="70" width="250" height="20" forecolor="#000000"/>
 				<textElement verticalAlignment="Middle" textAlignment="Right">
-					<font size="14" isBold="false"/>
+					<font size="12" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
@@ -131,7 +129,7 @@
 				<staticText>
 					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="650" y="0" width="150" height="18"/>
 					<textElement verticalAlignment="Middle" textAlignment="Center" />
-					<text><![CDATA[Situation description]]></text>
+					<text><![CDATA[Timestamp]]></text>
 				</staticText>
 			</frame>
 		</band>
@@ -140,28 +138,28 @@
 		<band height="15" splitType="Stretch">
 			<frame>
 				<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="Row" mode="Opaque" x="0" y="0" width="800" height="14"/>
-				<textField isBlankWhenNull="true">
+				<textField isBlankWhenNull="true" isStretchWithOverflow="true">
 					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="0" y="0" width="300" height="13"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center"/>
+					<textElement verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true"> 
+				<textField isBlankWhenNull="true" isStretchWithOverflow="true"> 
 					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="300" y="0" width="150" height="13"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center"/>
+					<textElement verticalAlignment="Middle" textAlignment="Center" />
 					<textFieldExpression><![CDATA[$F{situation}.getSchemaValue()]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
+				<textField isBlankWhenNull="true" isStretchWithOverflow="true">
 					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="450" y="0" width="200" height="13"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center"/>
+					<textElement verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$F{username}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
+				<textField pattern="dd.MM.yy, HH:mm:ss" isBlankWhenNull="true" isStretchWithOverflow="true">
 					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="650" y="0" width="150" height="13"/>
 					<textElement verticalAlignment="Middle" textAlignment="Center"/>
-					<textFieldExpression><![CDATA[$F{situationDescription}.getSchemaValue()]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{situationTimestamp}.toGregorianCalendar().getTime()]]></textFieldExpression>
 				</textField>
 				<line>
-					<reportElement uuid="47f91801-cf5f-4bed-b19c-ca3931cbf98d" positionType="FixRelativeToBottom" mode="Opaque" x="1" y="13" width="799" height="1" forecolor="#333333"/>
+					<reportElement uuid="47f91801-cf5f-4bed-b19c-ca3931cbf98d" positionType="FixRelativeToBottom" mode="Opaque" x="0" y="13" width="800" height="1" forecolor="#333333"/>
 				</line>
 			</frame>
 		</band>
