--- a/gui/admin-gui/src/main/webapp/reports/reportAuditLogs.jrxml
+++ b/gui/admin-gui/src/main/webapp/reports/reportAuditLogs.jrxml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report2" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="67e465c5-46ea-40d2-bea0-469c6cf38937">
 	<property name="ireport.zoom" value="1.6105100000000019"/>
-	<property name="ireport.x" value="34"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="DejaVu Sans" fontSize="50" isBold="false"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="DejaVu Sans" fontSize="18" isBold="false"/>
 	<style name="Column header" mode="Transparent" forecolor="#FFFFFF" backcolor="#333333" fontName="DejaVu Sans" fontSize="12" isBold="true"/>
-	<style name="Detail" mode="Transparent" fontName="DejaVu Sans" fontSize="8" isBold="false" forecolor="#000000"/>
+	<style name="Detail" mode="Transparent" forecolor="#000000" fontName="DejaVu Sans" fontSize="8" isBold="false"/>
 	<style name="Row" mode="Transparent" fontName="DejaVu Sans" fontSize="8" isBold="false">
 		<conditionalStyle>
 			<style mode="Opaque" backcolor="#F0EFEF"/>
 		</conditionalStyle>
 	</style>
 	<parameter name="LOGO_PATH" class="java.lang.String"/>
-	<parameter name="DATE_FROM" class="java.sql.Timestamp"/>	
+	<parameter name="DATE_FROM" class="java.sql.Timestamp"/>
 	<parameter name="DATE_TO" class="java.sql.Timestamp"/>
 	<queryString language="hql">
 		<![CDATA[select aer.timestamp as timestamp, aer.initiatorName as initiator, aer.eventType as eventType, aer.eventStage as eventStage, aer.targetName as targetName, aer.targetType as targetType, aer.targetOwnerName as targetOwnerName, aer.outcome as outcome, aer.message as message from RAuditEventRecord as aer where aer.timestamp >= $P{DATE_FROM} and aer.timestamp <= $P{DATE_TO} order by aer.timestamp]]>
@@ -35,7 +35,7 @@
 	<field name="outcome" class="com.evolveum.midpoint.repo.sql.data.common.enums.ROperationResultStatus">
 		<fieldDescription><![CDATA[outcome]]></fieldDescription>
 	</field>
-	<field name="message" class="java.lang.String"/>	
+	<field name="message" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -94,37 +94,37 @@
 				<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="SubTitle" mode="Transparent" x="0" y="1" width="800" height="19" isRemoveLineWhenBlank="true"/>
 				<staticText>
 					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="0" y="0" width="80" height="18"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center" />
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Timestamp]]></text>
 				</staticText>
 				<staticText>
 					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="80" y="0" width="80" height="18"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center" />
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Initiator]]></text>
 				</staticText>
 				<staticText>
 					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="160" y="0" width="90" height="18"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center" />
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Event Type]]></text>
 				</staticText>
-				<staticText> 
+				<staticText>
 					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="250" y="0" width="90" height="18"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center" />
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Event Stage]]></text>
 				</staticText>
 				<staticText>
 					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="340" y="0" width="200" height="18"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center" />
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Target]]></text>
 				</staticText>
 				<staticText>
 					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="540" y="0" width="80" height="18"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center" />
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Outcome]]></text>
 				</staticText>
 				<staticText>
 					<reportElement uuid="86c74beb-bddd-48cc-945a-167b261b1e0b" style="Column header" mode="Opaque" x="620" y="0" width="180" height="18"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center" />
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<text><![CDATA[Message]]></text>
 				</staticText>
 			</frame>
@@ -134,43 +134,43 @@
 		<band height="15" splitType="Stretch">
 			<frame>
 				<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="Row" mode="Opaque" x="0" y="0" width="800" height="14"/>
-				<textField pattern="dd.MM.yy, HH:mm:ss">
-					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="0" y="0" width="80" height="13"/>
+				<textField isStretchWithOverflow="true" pattern="dd.MM.yy, HH:mm:ss">
+					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="0" y="0" width="80" height="13" isPrintWhenDetailOverflows="true"/>
 					<textElement verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$F{timestamp}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true" isStretchWithOverflow="true"> 
-					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="80" y="0" width="80" height="13"/>
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="80" y="0" width="80" height="13" isPrintWhenDetailOverflows="true"/>
 					<textElement verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$F{initiator}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="160" y="0" width="90" height="13"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center"/>
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="160" y="0" width="90" height="13" isPrintWhenDetailOverflows="true"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$F{eventType}.getType()]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="250" y="0" width="90" height="13"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center"/>
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="250" y="0" width="90" height="13" isPrintWhenDetailOverflows="true"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$F{eventStage}.getStage()]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true" isStretchWithOverflow="true">
-					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="340" y="0" width="200" height="13">
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="340" y="0" width="200" height="13" isPrintWhenDetailOverflows="true">
 						<printWhenExpression><![CDATA[!$F{targetType}.equals(null)]]></printWhenExpression>
 					</reportElement>
 					<textElement verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$F{targetName} + " (" + $F{targetType} + ") "]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true" isStretchWithOverflow="true">
-					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="540" y="0" width="80" height="13"/>
-					<textElement verticalAlignment="Middle" textAlignment="Center"/>
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="540" y="0" width="80" height="13" isPrintWhenDetailOverflows="true"/>
+					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$F{outcome}.getSchemaValue()]]></textFieldExpression>
-				</textField>	
-				<textField isBlankWhenNull="true" isStretchWithOverflow="true">
-					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="620" y="0" width="180" height="13"/>
+				</textField>
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+					<reportElement uuid="28bb9b47-a69c-48e1-9073-d54d926242e8" style="Detail" x="620" y="0" width="180" height="13" isPrintWhenDetailOverflows="true"/>
 					<textElement verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$F{message}]]></textFieldExpression>
-				</textField>				
+				</textField>
 				<line>
 					<reportElement uuid="47f91801-cf5f-4bed-b19c-ca3931cbf98d" positionType="FixRelativeToBottom" mode="Opaque" x="0" y="13" width="800" height="1" forecolor="#333333"/>
 				</line>
