Added magic net.sf.jasperreports.export.pdf.force.linebreak.policy=true property for all reports.

--- a/gui/admin-gui/src/main/webapp/reports/reportReconciliation.jrxml
+++ b/gui/admin-gui/src/main/webapp/reports/reportReconciliation.jrxml
@@ -4,6 +4,7 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="2"/>
 	<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
+        <property name="net.sf.jasperreports.export.pdf.force.linebreak.policy" value="true"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="DejaVu Sans" fontSize="50" isBold="false"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="DejaVu Sans" fontSize="18" isBold="false"/>
 	<style name="Column header" mode="Transparent" forecolor="#FFFFFF" backcolor="#333333" fontName="DejaVu Sans" fontSize="12" isBold="true"/>
