new parameter for audit report

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/reports/component/AuditPopupPanel.html
@@ -37,6 +37,14 @@
                     <span wicket:id="dateTo"/>
                 </td>
             </tr>
+            <tr>
+            <td>
+                    <wicket:message key="AuditPopupPanel.auditEventType"/>
+                </td>
+             <td>
+                    <select wicket:id="auditEventType"/>
+                </td> 
+                </tr>
         </table>
 
         <div style="text-align: center;">
