fix for MID-1497

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/ExecuteChangeOptionsPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/ExecuteChangeOptionsPanel.html
@@ -20,7 +20,7 @@
     <span class="operatingFormText"><wicket:message key="ExecuteChangeOptionsPanel.label.force"/></span>
     <input wicket:id="force" type="checkbox"/>
 
-    <span class="operatingFormText"><label wicket:id="reconcileLabel"/></span>
+    <span class="operatingFormText" wicket:id="reconcileLabel"></span>
     <input wicket:id="reconcile" type="checkbox"/>
 
     <span class="operatingFormText"><wicket:message key="ExecuteChangeOptionsPanel.label.executeAfterAllApprovals"/></span>
